# manim-mcp-server

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  README.md  UV_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_custom_paths.py
docs/: tool_refactoring_comparison.md
examples/: basic_animation.py  custom_paths_example.py  refactored_tools_demo.py
scripts/: setup-uv.sh
src/: __init__.py  __main__.py  manim_server.py  server.py
tests/: __init__.py  test_server.py
